--- a/bplan.html
+++ b/bplan.html
@@ -49,7 +49,7 @@
                         </a>
 
                         <div class="one margin-0">
-                         <!--   <img src="bplan.png" alt="bplan">-->
+                         <!--   <img src="" alt="bplan">-->
                         </div>
                         <div class="clear"></div>
                         
