--- a/scroll.html
+++ b/scroll.html
@@ -50,7 +50,7 @@
                         </a>
 
                         <div class="one margin-0">
-                            <img src="scroll.png" alt="paper">
+                          <!--  <img src="" alt="paper"> -->
                         </div>
                         <div class="clear"></div>
                         
