--- a/ourteam.html
+++ b/ourteam.html
@@ -447,7 +447,7 @@
            <div class="col-md-3 col-sm-6">
             <div class="speaker_box">
                 <div class="speaker_img">
-                <img src="teampic/abhijeet.JPG" alt="team name">
+                <img src="teampic/abhijeet.jpg" alt="team name">
                 <div class="info_box">
                     <h5 class="name">Abhijeet Das</h5>
                     <p class="position">Hospitality Head</p>
