--- a/bplan.html
+++ b/bplan.html
@@ -4,9 +4,11 @@
         <title>Metallix '20 | Business Plan (Wall Street)</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="The annual technical fest of the Metallurgical & Material Engineering Department of Jadavpur University" />
-        <meta name="keywords" content="Metallix 2020>
+        <meta name="keywords" content="Metallix 2020, Metallurgy fests, Jadavpur University, Fest of Metallurgy, Kolkata fests " />
+        <meta name="author" content="Ayush Mishra" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+       <link rel="icon" type="image/png" href="logo3.png">
        <link rel="icon" type="image/png" href="logo3.png">
 	<link rel="apple-touch-icon" type="image/png" href="logo3.png" sizes="32x32" />
 
