--- a/sponsorship.html
+++ b/sponsorship.html
@@ -99,10 +99,10 @@ And for information related to sponsorships, Download the  Sponsorship Proposal 
                                             
                                             
                                             <div class="member-content">
-                                              <strong>1. Payments can be made online through any one of the following : </strong><br>
+                                              <strong>   1. Payments can be made online through any one of the following : </strong><br>
                                               - By scanning the QR code adjacent to this.<br>
-                                              - UPI Id : rvpmanred8001352800@okhdfcbank. <br>
-                                              - Pay to the number +91 8389982793 through Google Pay/PhonePe. <br>
+                                              - UPI Id : debgb2a-1@okicici. <br>
+                                              - Pay to the number +91 9007035506 through Google Pay/PhonePe.<br>
                                               <strong>2. Bank Details :</strong><br>
                                               - Bank: United bank of India<br>
 - Branch : Jadavpur Vidyapith, Kol : 700032<br>
