--- a/suits.html
+++ b/suits.html
@@ -97,12 +97,12 @@ The 1st round will be held on 20th March, 2019 and the next rounds on 21st March
                                             
                                             <div class="member-content">
                                                 Registration fees is Rs. 50 per participant (without accommodation).<br>
-                                  1. Payments can be made online through any one of the following : <br>
+                                     1. Payments can be made online through any one of the following : <br>
                                               - By scanning the QR code adjacent to this.<br>
-                                              - UPI Id : rvpmanred8001352800@okhdfcbank. <br>
-                                              - Pay to the number +91 8389982793 through Google Pay/PhonePe. <br>
-                            2. Payments can also be made offline at the venue.
-                                                
+                                              - UPI Id : debgb2a-1@okicici. <br>
+                                              - Pay to the number +91 9007035506 through Google Pay/PhonePe. <br>
+						    2. Payments can also be made offline at the venue.
+
                                             </div>
                                         </div>
                                         <div class="member-image-holder">
