--- a/info.html
+++ b/info.html
@@ -154,7 +154,7 @@
                         <img src="assets1/img/sS2-01.png" alt="placements">
                       </div>
                       <p class="slider--item-title">Suits</p>
-                      <p class="slider--item-description">Mock Placement<br>21st & 20th March<br>Jadavpur University</p>
+                      <p class="slider--item-description">Mock Placement<br>21st & 20th March<br>TEQIP Building<br>Jadavpur University</p>
                     </a>
                   </li>
                               <li class="slider--item slider--item-right">
