--- a/all.html
+++ b/all.html
@@ -69,7 +69,7 @@
                            <br>
                            <br>
                            <div class="one_half last ">
-                                 <a href="https://docs.google.com/forms/d/1Rvwb3TfIT8ykfTwgbDHyR_I29ua8D5wkQnhf4zDRKlU/edit?usp=drivesdk" target="_self" class="button ">Register</a>
+                                 <a href="https://docs.google.com/forms/d/1oii47QMcvEhWJlkOHRqY1MGD4R4K4t0sleve-RRRYn8/edit?usp=sharing" target="_self" class="button ">Register</a>
                             </div> 
                         </div>
                         <div class="one_half last ">
