--- a/bplan.html
+++ b/bplan.html
@@ -69,7 +69,7 @@
                            <br>
                            <br>
                           <div class="one_half last ">
-                                 <a href="https://docs.google.com/forms/d/1DEGHnzf-rsKTPy83b9c8EwaWnGS2QJfEcWeFa01rO7A/edit?usp=drivesdk" target="_self" class="button ">Register</a>
+                                 <a href="https://docs.google.com/forms/d/11-rSMhKXym4vOwwt_KvjDx6UgNrXWx0bsE5ezxi4pZQ/edit?usp=sharing" target="_self" class="button ">Register</a>
                             </div>
                         </div>
                         <div class="one_half last ">
