--- a/campusambassador.html
+++ b/campusambassador.html
@@ -66,7 +66,7 @@
                            <br>
                            <br>
                             <div class="text-right">
-                                <a href="https://docs.google.com/forms/d/e/1FAIpQLSdPJIj3O7XmXWe7IkeLPiOAavGx2nCS1lY9E1Xy4mb1T9mxMg/viewform?usp=sf_link" target="_self" class="button ">Apply</a>
+                                <a href="https://docs.google.com/forms/d/13jl528vGON9LRuu-g5cJrePf4oyd9E_eEk0A0ybDGN4/edit?usp=sharing" target="_self" class="button ">Apply</a>
                             </div>
                         </div>
 
