--- a/gnosis.html
+++ b/gnosis.html
@@ -69,7 +69,7 @@
                            <br>
                            <br>
                             <div class="one_half last ">
-                                 <a href="https://docs.google.com/forms/d/18BZpk5T10NjmJXAmrEc6F3lxXhLVAl9PWODuBtnQpaY/edit?usp=drivesdk" target="_self" class="button ">Register</a>
+                                 <a href="https://docs.google.com/forms/d/1IC9YrK0prnfFFzDdKK1I4hx88r9wRtYMnxtVSKQE_Sg/edit?usp=sharing" target="_self" class="button ">Register</a>
                             </div>
                         </div>
                         <div class="one_half last ">
