--- a/scribe.html
+++ b/scribe.html
@@ -68,7 +68,7 @@
                            <br>
                            <br>
                             <div class="one_half last ">
-                                 <a href="https://docs.google.com/forms/d/1tIG_ZYbT1yuyl-0oqv_-nVzsFHEoGvCTYX3vT45eGc0/edit?usp=drivesdk" target="_self" class="button ">Register</a>
+                                 <a href="https://docs.google.com/forms/d/1DET_5FxRU1CXAtKA8QbfbZ1j9fTn23QgMnVFsVk84y0/edit?usp=sharing" target="_self" class="button ">Register</a>
                             </div>
                         </div>
                         <div class="one_half last ">
