--- a/specio.html
+++ b/specio.html
@@ -68,7 +68,7 @@
                            <br>
                            <br>
                              <div class="one_half last ">
-                                 <a href="https://docs.google.com/forms/d/1EmCu_w4rF8thp05LAyJcmUq9xn6xc1eJIVjKurDLDP0/edit?usp=drivesdk" target="_self" class="button ">Register</a>
+                                 <a href="https://docs.google.com/forms/d/10Ye7EtCFAuQgQpwMhgfmPPOXD7A6-KCxqdKcBHdNZAs/edit?usp=sharing" target="_self" class="button ">Register</a>
                             </div>
                         </div>
                         <div class="one_half last ">
