--- a/suits.html
+++ b/suits.html
@@ -70,7 +70,7 @@
                            <br>
                            <br>
                             <div class="one_half last ">
-                                 <a href="https://docs.google.com/forms/d/1hhbVFvMOVTeWrJBv30tzDJR4uGLJ__AmCIO0R5cKFcg/edit?usp=drivesdk" target="_self" class="button ">Register</a>
+                                 <a href="https://docs.google.com/forms/d/1FmoZ1fu57sSoQ13xmtj-0TlUtDFvXilFSZy0XfkWLCU/edit?usp=sharing" target="_self" class="button ">Register</a>
                             </div>
                         </div>
                         <div class="one_half last ">
