--- a/talaash.html
+++ b/talaash.html
@@ -90,8 +90,9 @@
 7. In case of any discrepancy, the decision of the organisers shall be final and binding.<br><br>
 
 <strong>Please contact our Co-ordinators for any other queries :</strong><br>
-1. Sohini Dikshit : +91 7908016567<br>
-2. Mayukh Das : +91 8902017084<br>
+1. Ishan Ray : <br>
+2. Sagnik Mukherjee : <br>
+3. Abhishek Rohra : +91 9931954754 <br>				    
 <p><strong><span style="color: #e64b77 ;">Payment Details : </span></strong></p>
                         
                                         <div class="member-content-holder">
