--- a/suits.html
+++ b/suits.html
@@ -88,8 +88,8 @@
 The 1st round will be held on 20th March, 2020 and the next rounds on 21st March, 2020.<br>
 2. Every one who will be  registering will be a part of round 1, after that the applicants who will qualify will be shortlisted for the second round and then eventually for 3rd round. And finally two students will be placed and they will get the event prize.<br>
 <strong>Please contact our Co-ordinators for any other queries :</strong><br>
-1. Divyansh Srivastava : +91 8017249038<br>
-2. Abhishek Kumar : +91 8797321055<br>
+1. Aban Mondal : +91 9051920637<br>
+2. Aryan Singh : <br>
 <p><strong><span style="color: #e64b77 ;">Payment Details : </span></strong></p>
                         
                                         <div class="member-content-holder">
