--- a/specio.html
+++ b/specio.html
@@ -85,9 +85,9 @@
 
 <strong>Please contact our Co-ordinators for any other queries :</strong><br>
 
-1. Mukund Pilania : +91 7004265831<br>
+1. Shailesh Kumar : +91 8757524131<br>
+2. Akith Jabed Barlaskar : +91 9954256325<br>
 
-2. Shailesh Kumar : +91 8757524131<br>
 <p><strong><span style="color: #e64b77 ;">Payment Details : </span></strong></p>
                         
                                         <div class="member-content-holder">
