--- a/specio.html
+++ b/specio.html
@@ -87,6 +87,7 @@
 
 1. Shailesh Kumar : +91 8757524131<br>
 2. Akith Jabed Barlaskar : +91 9954256325<br>
+3. Peuse Khanda : <br>			
 
 <p><strong><span style="color: #e64b77 ;">Payment Details : </span></strong></p>
                         
