--- a/scroll.html
+++ b/scroll.html
@@ -94,8 +94,8 @@ Paper presentation is all about how you put your topic or present your topic in 
 
 
 <strong>Please Contact our Co-ordinators for any other queries : </strong><br>
-1. Shuvamoy Chatterjee : +91 6290499945<br>
-2. Lipika Jhawar : +91 8170886617<br>
+1. Peuse Khanda : +91 <br>
+2. Kushal Chakrabarti : +91 8160622774<br>
 <p><strong><span style="color: #e64b77 ;">Payment Details : </span></strong></p>
                         
                                         <div class="member-content-holder">
