--- a/scribe.html
+++ b/scribe.html
@@ -88,8 +88,9 @@
 6. The decision of the judges will be final.<br>
 
 <strong>Please Contact our Co-ordinators for any other queries : </strong><br>
-1. Ankit Singh : +91 7492879935<br>
-2. Aneek Pilsima : +91 8961856917<br>
+1. Vaibhav Gupta : +91 8240525493<br>
+2. Asmita Khaitan : <br>
+3. Srijan Sur : +91 9547091712<br>
 <p><strong><span style="color: #e64b77 ;">Payment Details : </span></strong></p>
                         
                                         <div class="member-content-holder">
