--- a/gnosis.html
+++ b/gnosis.html
@@ -85,8 +85,9 @@
 3. There will be a prelims followed by the finals.<br>4. The top 5 teams from the prelims would be chosen for the finals.<br><br>
 
 <strong>Please contact our Co-ordinators for any other queries :</strong><br>
-1. Chandramouli Sarkar : +91 9771302601<br>
-2. Shubham Kr. Sinha : +91 9473008108<br>
+1. Chandramouli Sarkar : +91 9123303407<br>
+2. Avijit Mallick : +91 8240965956<br>
+3. Parijaat : <br>
 <p><strong><span style="color: #e64b77 ;">Payment Details : </span></strong></p>
                         
                                         <div class="member-content-holder">
