--- a/bplan.html
+++ b/bplan.html
@@ -124,8 +124,9 @@ Guidelines for the format of the business model :<br><br>
 -What would be the size and revenue of your business after 10 years?<br>
 -Plans to cope up with the changing market scenario.<br>
 <strong>Please contact our Co-ordinators for any other queries: </strong><br>
-1. Soumya Mitra : +91 9432992916<br>
-2. Deb Gopal Das : +91 9073789106<br>
+1. Shubham Srivastav : +91 9831567556<br>
+2. Arshia Mitra : +91 9051888356<br>
+3. Ritam Deb : +91 9674906337<br>
 <p><strong><span style="color: #e64b77 ;">Payment Details : </span></strong></p>
                         
                                         <div class="member-content-holder">
